Whoops lots left to commit

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% capture authorstring %}{% include author-name.html authorid=page.author %}{% endcapture %}
-
+<link rel="stylesheet" type="text/css" href="/assets/css/print.css">
 <article class="post-wrapper">
 
   <div class="post-main-content">
