Initial pass at moving crosspost to yaml and standardizing format

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,11 @@ layout: default
 
     <!-- text of post -->
     <div class="post__content">
+      <div class="post_crosspost">
+        {% if page.crosspost %}
+        {{ page.crosspost }}
+        {% endif %}
+      </div>
       {{ content }}
     </div>
 
