--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -316,3 +316,10 @@
 img{
 	max-width:100%;
 }
+
+.post_crosspost{
+padding: 20px;
+border-color: #75e3f0;
+border-style: solid;
+margin-bottom: 15px;
+}
