--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,400i,600,700,700i,900|Oswald:200,400,600,700|Inconsolata:400,700|VT323" rel="stylesheet">
   <link rel="stylesheet" href="{{ "assets/css/style.css" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ "assets/css/print.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}/">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   
