--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,10 @@ body {
 	line-height: 1.5; // if 16px, = 24px line height
 }
 
+iframe {
+    width: 100%;
+}
+
 /* Partials: */
 
 @import "_colors/slab-palette";
