Update hours, printer reservation, techs info

--- a/_includes/makerspace-hours.html
+++ b/_includes/makerspace-hours.html
@@ -6,17 +6,16 @@
 <span>Friday</span>1-5pm<br/>
 <span>Sat-Sun</span>Closed<br/><br/>
 -->
-
+<!--
 <span>Summer 2019 Hours</span><br/>
 
 <span>Monday-Friday</span>1-5pm<br/>
+-->
 
 <!-- template - regular hours -->
-<!-- 
-<div>Staffed Hours</div>
-<span>Mondays:</span>1-7pm<br/>
-<span>Tuesdays:</span>1-9pm<br/>
-<span>Wednesdays:</span>1-7pm<br/>
-<span>Thursdays:</span>1-9pm<br/>
+<div>Fall 2019 Hours</div>
+<span>Mondays:</span>1-9pm<br/>
+<span>Tuesdays:</span>3:30-9pm<br/>
+<span>Wednesdays:</span>1-9pm<br/>
+<span>Thursdays:</span>3:30-7:30pm<br/>
 <span>Fridays:</span>1-5pm 
--->
