Added missing ALT attribute. Fixed incorrectly nested comments.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,13 +40,15 @@
         </a>
         <a href="https://scholarslab.lib.virginia.edu/feed.xml">
           <!-- <div>RSS icon made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
-          <img src="{{ '/assets/img/svg/rss.svg' | relative_url }}">
+          <img src="{{ '/assets/img/svg/rss.svg' | relative_url }}" alt="RSS feed icon" />
           <span>RSS feed</span>
       </div>
-      <!--div class="footer-connect__news">
+      <!-- 
+      <div class="footer-connect__news">
         <div class="footer-news__title">Newsletter</div>
-        <div class="footer-news__modal"><!-- icon wrapped in JS trigger for newsletter modal to come up -></div>
-      </div-->
+        <div class="footer-news__modal"><!- icon wrapped in JS trigger for newsletter modal to come up -></div>
+      </div>
+      // -->
     </div>
 
     <div class="footer__contact">
