Main is already a "main" so doesn't need a `role` attribute. Fixed the apostrophe's in the `<html>`

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
 
 	{% include head.html %}
 
 	<body>
 		{% include navbar.html %}
 
-		<main id="main" role="main">
+		<main id="main">
 			{{ content }}
 		</main>
 
