--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,59 +2,64 @@
 layout: default
 ---
 {% capture authorstring %}{% include author-name.html authorid=page.author %}{% endcapture %}
+
 <article class="post-wrapper">
+    <div class="post-main-content">
+        
+        <div class="post__big-title" id="print-byline">
+            <span aria-label="page type">Scholars' Lab Blog //</span>{{ page.title | replace: ' - ', ': ' }}
+        </div>
 
-  <div class="post-main-content">
+        <div class="post__big-title" id="non-print-byline">
+            <span aria-label="page type">Blog //</span>{{ page.title | replace: ' - ', ': ' }}
+        </div>
 
-    <div class="post__big-title" id="print-byline"><span aria-label="page type">Scholars' Lab Blog //</span>{{ page.title | replace: ' - ', ': ' }}</div>
+        <!-- make span an <a> tag to blog home and put h1 tags around page.title w/ the font styles when finalizing -->
+        
+        <div class="post__metadata">
+            {% if page.pull-quote != nil %}
+            <div class="post-meta__quote">&ldquo;{{ page.pull-quote }}&rdquo;</div>
+            {% endif %}
 
-    <div class="post__big-title" id="non-print-byline"><span aria-label="page type">Blog //</span>{{ page.title | replace: ' - ', ': ' }}</div>
+            <div class="post-meta__author">
+                <span>By</span> {{ authorstring | strip }} on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
+            </div>
 
-    <!-- make span an <a> tag to blog home and put h1 tags around page.title w/ the font styles when finalizing -->
+            {% assign catsize = page.categories | size %}
+            <!--  {% if catsize >= 1 %}
+            <div class="post-meta__categories">Filed to:
+            {% for c in page.categories %}
+            {% assign last = page.categories | last %}
+            {% if c == last %} {{ c | downcase }}
+            {% else %} {{ c | downcase }},
+            {% endif %}{% endfor %}
+            </div>
+            {% endif %}
+            -->
 
-    <div class="post__metadata">
+            {% assign tagsize = page.tags | size %}
+            <!--    {% if tagsize >= 1 %}
+            <div class="post-meta__tags">Tagged as:
+            {% for t in page.tags%}
+            {% assign last = page.tags | last %}
+            {% if t == last %} <a href="{{ site.url }}/posts-by-tag/#{{ t | slugify }}">{{ t }}</a>
+            {% else %} <a href="{{ site.url }}/posts-by-tag/#{{ t | slugify }}">{{ t }}</a>,
+            {% endif %}{% endfor %}
+            </div>
+            {% endif %}
+            -->
+            
+            {% include old-post-alert.html %}
 
-      {% if page.pull-quote != nil %}
-      <div class="post-meta__quote">&ldquo;{{ page.pull-quote }}&rdquo;</div>
-      {% endif %}
-
-      <div class="post-meta__author">
-        <span>By</span> {{ authorstring | strip }} on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %-d, %Y" }}</time>
-      </div>
-
-      {% assign catsize = page.categories | size %}
-<!--  {% if catsize >= 1 %}
-      <div class="post-meta__categories">Filed to:
-        {% for c in page.categories %}
-        {% assign last = page.categories | last %}
-        {% if c == last %} {{ c | downcase }}
-        {% else %} {{ c | downcase }},
-        {% endif %}{% endfor %}
-      </div>
-      {% endif %}
--->
-{% assign tagsize = page.tags | size %}
-<!--    {% if tagsize >= 1 %}
-      <div class="post-meta__tags">Tagged as:
-        {% for t in page.tags%}
-        {% assign last = page.tags | last %}
-        {% if t == last %} <a href="{{ site.url }}/posts-by-tag/#{{ t | slugify }}">{{ t }}</a>
-        {% else %} <a href="{{ site.url }}/posts-by-tag/#{{ t | slugify }}">{{ t }}</a>,
-        {% endif %}{% endfor %}
-      </div>
-      {% endif %}
--->
-    {% include old-post-alert.html %}
-
-    </div> <!-- end metadata -->
-
-    <!-- text of post -->
-    <div class="post__content">
-        {% if page.crosspost %}
-          <div class="post_crosspost">
-              {% if page.crosspost.size == 1 %}
-              Crossposted to <a href="{{ page.crosspost[0].url }}">{{ page.crosspost[0].title }}</a>.
-              {% else %}
+        </div> <!-- end metadata -->
+        
+        <!-- text of post -->
+        <div class="post__content">
+            {% if page.crosspost %}
+            <div class="post_crosspost">
+            {% if page.crosspost.size == 1 %}
+            Crossposted to <a href="{{ page.crosspost[0].url }}">{{ page.crosspost[0].title }}</a>.
+            {% else %}
             {% capture crosspostings %}
             {% for target in page.crosspost %}
             <a href="{{ target.url }}">{{ target.title }}</a>,
@@ -63,36 +68,36 @@ layout: default
             {% assign crosspostarray = crosspostings | strip | split: "," %}
             Crossposted to {{ crosspostarray | array_to_sentence_string }}.
             {% endif %}
-          </div>
-        {% endif %}
-      {{ content }}
-    </div>
+            </div>
+            {% endif %}
 
-    <footer class="post__credits">
-      {% comment %}
-      {% for author in page.author %} <!-- if there is a listed author -->
-      {% include author-profile.html authorid=page.author %}
-      {% endfor %}
-      {% endcomment %}
-        <!-- cite post -->
-        <div class="post-credits__citation">
-            <span>Cite this post: </span>{{ authorstring | strip }}. &ldquo;{{ page.title }}&rdquo;. Published {{ page.date | date: "%B %d, %Y" }}. <a href="{{site.url}}{{page.url}}">{{site.url}}{{page.url}}</a>. Accessed on
-<script>
-<!--
-var now = new Date();
-var months = new Array('January','February','March','April','May','June','July','August','September','October','November','December');
-var date = ((now.getDate()<10) ? "0" : "")+ now.getDate();
-function fourdigits(number) {
-    return (number < 1000) ? number + 1900 : number;
-}
-today =  months[now.getMonth()] + " " +
-         date + ", " +
-         (fourdigits(now.getYear())) ;
-document.write(today);
--->
-</script>.
+            {{ content }}
         </div>
 
-    </footer> <!-- end post footer -->
-  </div> <!-- end post-main-content -->
+        <footer class="post__credits">
+            {% comment %}
+            {% for author in page.author %} <!-- if there is a listed author -->
+            {% include author-profile.html authorid=page.author %}
+            {% endfor %}
+            {% endcomment %}
+
+            <!-- cite post -->
+            <div class="post-credits__citation">
+                <span>Cite this post: </span>{{ authorstring | strip }}. &ldquo;{{ page.title }}&rdquo;. Published {{ page.date | date: "%B %d, %Y" }}. <a href="{{site.url}}{{page.url}}">{{site.url}}{{page.url}}</a>. Accessed on
+                <script>
+                // <![CDATA[
+                    var now = new Date(); 
+                    var months = new Array('January','February','March','April','May','June','July','August','September','October','November','December'); 
+                    var date = ((now.getDate()<10) ? "0" : "")+ now.getDate(); 
+                    function fourdigits(number) {
+                        return (number < 1000) ? number + 1900 : number;
+                    }
+                    today = months[now.getMonth()] + " " + date + ", " + (fourdigits(now.getYear())); 
+                    document.write(today);
+                // ]]>
+                </script>
+            </div>
+        </footer> <!-- end post footer -->
+
+    </div> <!-- end post-main-content -->
 </article> <!-- end post wrapper -->
