Added `role="banner` to header, as requested.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<header>
+<header role="banner">
 	<div id="library-banner">
 		<a href="https://www.library.virginia.edu" aria-label="University of Virginia Library" id="library-link">{% include library-logotype.html %}</a>
 	</div>
