Changed ending comments to match rest of file.

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -8,7 +8,7 @@ layout: default
 		<div class="event__big-title">
 			<span aria-label="page type">Events //</span>
 			<div>{{ page.title | replace: ' - ', ': ' | replace: ' and ', ' &amp; ' }}</div>
-		</div><!-- // event__big-title -->
+		</div><!-- event__big-title -->
 
 		<!-- NB: !!! this only exists until we restructure the YAML !!! -->
 		<!-- remove trailing seconds zeros on time -->
@@ -64,7 +64,7 @@ layout: default
 					<li><span>Questions?</span><br/>Contact Scholars' Lab's Head of Public Programs <a href="mailto:lam2c@virginia.edu?subject=Question about SLab Event">Laura Miller</a>.</li>
 				</ul>
 			</div>
-		</div><!-- // event__notes -->
+		</div><!-- event__notes -->
 
 	</div> <!-- end main content -->
 </article> <!-- end wrapper -->
