--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -88,7 +88,7 @@ layout: default
 		    {% elsif author_posts.size < 1 %}
 		    <p class="person-posts__none-found">There are no posts by {{ page.first_name }} at this time.</p>
 		    {% endif %}
-		</div><!-- // person__posts -->
+		</div><!-- person__posts -->
 
-	</div><!-- // person-main-content -->
-</div><!-- // person-wrapper -->
+	</div><!-- person-main-content -->
+</div><!-- person-wrapper -->
