--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="page-wrapper">
 
-  <header class="page-header-wrapper">
+  <header role="banner" class="page-header-wrapper">
     <h1 class="page-header__big-title"><span>{{ page.title | escape | replace: ' - ', ': ' | replace: ' and ', ' &amp; ' }}</span></h1>
     <h3 class="page-header__subtitle">{{ page.excerpt }}</h3>
   </header>
