Updated homepage Open Office Hours=>cancelled

--- a/_includes/open-office-hours.html
+++ b/_includes/open-office-hours.html
@@ -1,7 +1,7 @@
 <div>		
 				<h2>Open Office Hours</h2>
 				<ul>
-				<li><span>When:</span> 10-11:30am Wednesdays, during fall and spring term</li>
+				<li><span>When:</span> 10-11:30am Wednesdays, during fall and spring term (**currently cancelled due to COVID-19**)</li>
 				<li><span>Where:</span> Scholars' Lab's <a href="/hours-and-spaces/#the-common-room">discussion area</a> just inside our Common Room.</li>
                 </ul>
                 <p>Come chat with our experts about anything, from your getting started through advanced projects.</p>
