Adds text and formatting for alert message.
Fixes #871.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,8 +24,8 @@ iframe {
 @import "universal-styles";
 @import "home";
 @import "navbar";
+@import "alert-message";
 @import "page";
-// @import "amanda";
 @import "logos";
 @import "makerspace";
 @import "footer";
