--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,3 +33,6 @@
 		</ul>
 	</div> <!-- end content -->
 </div> <!-- end wrapper -->
+<div id="alert-message">
+<p><strong>COVID-19 Update:</strong> All UVA Libraries are closed until further notice. Scholars' Lab staff working remotely will continue to provide online consultations for online teaching, research, and coursework. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with your GIS, VR, digital project, and makerspace needs. <a href="https://www.library.virginia.edu/news/covid-19">Read more about UVA Library's Response</a></p>
+</div>
