--- a/assets/css/_sass/_alert-message.scss
+++ b/assets/css/_sass/_alert-message.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 70vh;
+  min-height: 70vh;
   background: $grape;
   color: white;
 
