--- a/_includes/open-office-hours.html
+++ b/_includes/open-office-hours.html
@@ -1,5 +1,5 @@
 <div>		
-				<h2>Open Office Hours</h2>
+				<h2>Cancelled: Open Office Hours</h2>
 				<ul>
 				<li><span>When:</span> 10-11:30am Wednesdays, during fall and spring term (**currently cancelled due to COVID-19**)</li>
 				<li><span>Where:</span> Scholars' Lab's <a href="/hours-and-spaces/#the-common-room">discussion area</a> just inside our Common Room.</li>
