--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,5 +34,5 @@
 	</div> <!-- end content -->
 </div> <!-- end wrapper -->
 <div id="alert-message">
-<p><strong>COVID-19 Update:</strong> All UVA Libraries are closed until further notice. Scholars' Lab staff working remotely will continue to provide online consultations for online teaching, research, and coursework. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> with your GIS, VR, digital project, and makerspace needs. <a href="https://www.library.virginia.edu/news/covid-19">Read more about UVA Library's Response</a></p>
+<p><strong>FALL 2020 UPDATE:</strong> The Scholars’ Lab staff will be working remotely to support your teaching and research needs. All of our workshops, events, and consultations will be online throughout the Fall. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to ask a question or schedule a virtual GIS, VR, digital project, or makerspace consultation.</p>
 </div>
