--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,5 +34,5 @@
 	</div> <!-- end content -->
 </div> <!-- end wrapper -->
 <div id="alert-message">
-<p><strong>FALL 2020 UPDATE:</strong> The Scholars’ Lab staff will be working remotely to support your teaching and research needs. All of our workshops, events, and consultations will be online throughout the Fall. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to ask a question or schedule a virtual GIS, VR, digital project, or makerspace consultation.</p>
+<p><strong>COVID-19 Update:</strong> The Scholars’ Lab staff is available, working remotely to support your teaching and research needs. All of our workshops, events, and consultations will be online this semester. Contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to ask a question or schedule a virtual GIS, VR, digital project, or makerspace consultation. For information about other departments, see the Library’s <a href="https://www.library.virginia.edu/status">Status Dashboard</a> and <a href="https://www.library.virginia.edu/news/covid-19/">FAQ</a>.</p>
 </div>
