--- a/_layouts/makerspace.html
+++ b/_layouts/makerspace.html
@@ -28,10 +28,15 @@ layout: default
 		<div class="event__stats">
 			<div class="event-stats__title">Event Info</div>
 			<div class="event-stats__box">
-				{% if page.start_date %}
+        {% if page.start_date != page.end_date %}
+        <span>Date:</span>{{ page.start_date | date: "%A, %b %d" }} - {{
+        page.end_date | date: "%A, %b %d" }}<br/>
+				{% elsif page.start_date %}
 				<span>Date:</span>{{ page.start_date | date: "%A, %m/%-d/%Y" }}<br/>
 				{% endif %}
-				{% if page.start_time and page.end_time  %}
+        {% if page.start_time == "" %}
+        <span>Time:</span>During Open Hours<br/>
+				{% elsif page.start_time and page.end_time  %}
 				<span>Time:</span>{{ start_time }}-{{ end_time }}<br/>
 				{% endif %}
 				<!--span>Length:</span>1hr<br/-->
