--- a/assets/css/_sass/_colors/_slab-palette.scss
+++ b/assets/css/_sass/_colors/_slab-palette.scss
@@ -1,5 +1,43 @@
 /* Color Palette: */
 
+/* Backgrounds */
+$white: #ffffff;
+$grey-lightest: #f1f1f1;
+
+/* Alerts */
+$alert-level-1: #FBCFDA;
+
+/* Primary Colors */
+$brand-blue: #232D4B;
+$brand-blue-light: #0370B7;
+$brand-blue-lighter: #3395D4;
+$brand-blue-lightest: #87B9D9;
+$brand-orange-dark: #B35900;
+$brand-orange: #E57200;
+
+/* Secondary Colors */
+$blue-alt-dark:#005679;
+$blue-alt:#007BAC;
+$blue-alt-light:#55C4EC;
+$blue-alt-lighter:#91D8F2;
+$blue-alt-lightest:#BFE7F7;
+$teal-darker:#16777C;
+$teal-dark:#1DA1A8;
+$teal:#25CAD3;
+$teal-light:#5BD7DE;
+$teal-lightest:#C8F2F4;
+
+/* Greys */
+$grey-darkest:#2B2B2B;
+$grey-dark: #4f4f4f;
+$grey: #808080;
+$grey-light: #dadada;
+$grey-lightest: #f1f1f1;
+
+
+
+/*** Previous Palette ****/
+
 /* Key:
 1. grape: 			    bright purple
 2. pale aqua: 		    light blue, hint of gray
@@ -11,7 +49,7 @@
 */
 
 /* HSL: */
-$grape: 				hsla(268%, 62%, 46%, 1);
+$grape: 				   hsla(268%, 62%, 46%, 1);
 $pale-aqua: 			hsla(212%, 56%, 82%, 1);
 $diamond: 				hsla(178%, 87%, 85%, 1);
 $darkpastelpurple:  	hsla(263%, 50%, 65%, 1);
@@ -21,8 +59,8 @@ $medskyblue: 			hsla(186%, 79%, 70%, 1);
 $brightgrape:			hsla(268%, 70%, 55%, 1);
 
 /* Custom: */
-$textgray: 				hsla(186, 1%, 25%, 1); // default text
-$navgray:				hsla(186, 0%, 13%, 1); // dark backgrounds
+$textgray: 				$grey-darkest; // default text
+$navgray:				rgb(20,30,60); // dark backgrounds
 
 /* RGB: */
 $rgb-grape: 			rgba(111, 45, 189, 1);
