--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -166,8 +166,8 @@
 	a {
 		margin-top: 0 !important;
 		font-size: 1rem !important;
-		color: $brightgrape !important;
-		border-color: $brightgrape !important;
+		color: $brand-orange !important;
+		text-transform: uppercase;
 	}
 	@media screen and (max-width: 767px) {
 		a {
