--- a/assets/css/_sass/_page.scss
+++ b/assets/css/_sass/_page.scss
@@ -41,23 +41,8 @@
 	color: $navgray !important;
 	background-color: white;
 	mix-blend-mode: multiply;
-	&::before {
-		content: '';
-		position: absolute;
-		top: calc(100% - 8px);
-		left: 0;
-		width: 100%;
-		height: 8px;
-		background-color: $grape;
-		background-image: linear-gradient(rgba(255,255,255,.1), rgba(255,255,255,.1)), url('../img/decorative/color-splatter-purple.jpg');
-		background-size: cover;
-		background-position: bottom left;
-	}
 	span {
 		display: inline-block;
-		text-shadow: 0 0 1px rgba(0,0,0,.5);
-		padding-bottom: 8px;
-		border-bottom: 8px solid $navgray;
 	}
 }
 
@@ -114,7 +99,6 @@
 		font-size: calc(1.625rem * 10/9);
 		font-family: "Oswald", sans-serif;
 		font-weight: 600;
-		border-bottom: 2px solid $brightgrape;
 		@media screen and (min-width: 768px) {
 			margin-top: 1em;
 			font-size: calc(2rem * 10/9);
@@ -127,15 +111,15 @@
 	h3 {
 		margin-top: .5em;
 		margin-bottom: .5em;
-		font-size: calc(1.375rem * 10/9);
+		font-size: calc(1.25rem * 10/9);
 		font-family: "Oswald", sans-serif;
 		font-weight: 600;
 		@media screen and (min-width: 768px) {
 			margin-top: 1em;
-			font-size: calc(1.5rem * 10/9);
+			font-size: calc(1.325rem * 10/9);
 		}
 		@media screen and (min-width: 1020px) {
-			font-size: calc(1.75rem * 10/9);
+			font-size: calc(1.5rem * 10/9);
 		}
 	}
 	h4 {
@@ -151,13 +135,12 @@
 	a {
 		font-weight: bold;
 		text-decoration: none;
-		color: hsl(186,1%,25%);
-		border-bottom: 2px solid $brightgrape;
+		color: $blue-alt;
+		border-bottom: 1px solid $blue-alt-light;
 		-webkit-transition: background-color .3s;
 		transition: background-color .3s;
 		&:active, &:hover, &:focus {
-			color: black;
-			background-color: hsla(260%, 86%, 53%, .7);
+			color: $blue-alt-dark;
 		}
 	}
 	// # block quotes
@@ -165,7 +148,7 @@
 		margin: 1em;
 		margin-left: 0;
 		padding-left: calc(1.5em - 2px);
-		border-left: 2px solid $brightgrape;
+		border-left: 2px solid $blue-alt-light;
 		* {
 			opacity: .5;
 		}
@@ -235,18 +218,7 @@
 		}
 	}
 }
-.events-header__big-title::before {
-	content: '';
-	position: absolute;
-	top: calc(100% - 8px);
-	left: 0;
-	width: 100%;
-	height: 8px;
-	background-color: #702dbe;
-	background-image: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.1)),url(../img/decorative/color-splatter-purple.jpg);
-	background-size: cover;
-	background-position: bottom left;
-}
+
 .events-header__subtitle{
 	margin-top: 16px;
 }
