--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -137,8 +137,6 @@ html, body {
 
 [class*="home-hero__"] {
 	position: relative;
-	font-size: 1.33em; // 3/4 scale
-	line-height: 1.5;
 	color: $textgray;
 	margin: .6em;
 	margin-top: 0;
@@ -155,21 +153,11 @@ html, body {
 		border-bottom: 2px solid $medskyblue;
 	}
 	p:first-of-type {
-		margin-top: .5em;
+		font-size: 1.5em; // 3/4 scale
+		line-height: 1.5;
+		margin-bottom: 2em;
 	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.67em; // 3/4 scale
-		line-height: 1.2;
-		h3 {
-			font-size: 2.25rem;
-		}
-	}
-	@media screen and (min-width: 1200px) {
-		h3 {
-			font-size: calc(18px * 2.25);
-			margin-bottom: .5em;
-		}
-	}
+
 }
 
 .home-hero__description {
