Add a nice little color change on hover

--- a/assets/css/_sass/_makerspace.scss
+++ b/assets/css/_sass/_makerspace.scss
@@ -342,6 +342,11 @@
 	}
 }
 
+#equipment-btn:hover {
+  background: #2dd;
+  border-color: #ba7fff;
+}
+
 .makerspace__inventory {
 	grid-area: invent;
 	position: relative;
