--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,5 +34,5 @@
 	</div> <!-- end content -->
 </div> <!-- end wrapper -->
 <div id="alert-message">
-<p><strong>2021-22 Update:</strong> The Scholars’ Lab staff is offering a mix of remote and in-person consultations, workshops, and events this semester. Visit our <a href="https://scholarslab.lib.virginia.edu/makerspace/">TinkerTank</a> in Clemons (<a href="https://uvapolicy.virginia.edu/policy/SEC-045">masks required</a> in Library buildings) or contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to schedule a GIS, VR, or digital project consultation. For more information about Library services, see the <a href="https://www.library.virginia.edu/status">Status Dashboard</a>.</p>
+<p>The Scholars’ Lab staff is offering a mix of remote and in-person consultations, workshops, and events. Visit our <a href="https://scholarslab.lib.virginia.edu/makerspace/">TinkerTank</a> in Clemons or contact us at <a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a> to schedule a GIS, VR, or digital project consultation.</p>
 </div>
