Fix link colors and layout on makerspace page

--- a/assets/css/_sass/_makerspace.scss
+++ b/assets/css/_sass/_makerspace.scss
@@ -35,6 +35,17 @@
 	}
 }
 
+// Links
+[class*="maker-"], [class*="makerspace-"] {
+	a {
+		color:#873cdd;
+		font-weight: normal;
+	}
+	a:hover {
+		color:#2dd;
+		font-weight: normal;
+	}
+}
 /* Landing Page: */
 
 .makerspace-landing-grid {
@@ -148,8 +159,11 @@
 	grid-auto-rows: minmax(25vh, auto);
 	grid-template-areas: "ethos"
 						"hours"
-						 "people"
-						 "usage"
+						"vision"
+						"mission"
+						"people"
+						"usage"
+						"resources"
 						"invent"
 						"public"
 						"diagram"
@@ -161,14 +175,31 @@
 	@media screen and (min-width: 768px) {
 		grid-template-columns: 1fr 1fr;
 		grid-template-areas: "ethos hours"
-							 "people usage"
-                             "calendar calendar"
+		      		"vision mission"
+							"resources usage"
+							"calendar calendar"
+							"people people"
 							"invent invent"
 							"public diagram"
 							"question question";
 	}
 	@media screen and (min-width: 768px) {
 		font-size: 1.125rem;
+	}
+	@media screen and (max-width: 1150px) {
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas: "ethos ethos"
+							"hours hours"
+		      		"vision vision"
+							"mission mission"
+							"resources resources"
+							"usage usage"
+							"people people"
+							"calendar calendar"
+							"invent invent"
+							"public diagram"
+							"question question";
+
 	}
 }
 
@@ -189,11 +220,28 @@
 
 }
 
+/* Vision: */
+.makerspace__vision {
+	grid-area: vision;
+	@media screen and (min-width: 768px) {
+		padding-right: 8.33%;
+	}
+}
+
+/* Mission: */
+.makerspace__mission {
+	grid-area: mission;
+	@media screen and (min-width: 1150px) {
+		padding-left: 8.33%;
+	}
+}
+
+
 /* Hours: */
 
 .makerspace__hours {
 	grid-area: hours;
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 1150px) {
 		padding-left: 8.33%;
 	}
 }
@@ -208,6 +256,31 @@
 
 .maker-hours__explainer {
 
+}
+/* LibApps Styles */
+.s-lc-whw-sublocname {visibility: hidden;}
+.s-lc-whw thead { background-color: #F5F5F5; }
+.s-lc-whw-head-date { color: #5F5F5F; }
+.s-lc-whw-today-h {  background-color: #ddd; }
+.s-lc-whw-today { background-color: #F5F5F5; }
+.s-lc-whw-bh { text-align: right; white-space: nowrap; }
+.s-lc-whw-locname { font-weight: bold;}
+.s-lc-whw-sublocname{ padding-left: 10px!important; }
+.s-lc-whw-footnote { color: #555; font-size: 80%; }
+.s-lc-whw-footnote td:hover { background-color:#fff!important;}
+/* Below styles can be removed if you are already using Bootstap v3 in host page */
+.s-lc-whw-cont {font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 12px;}
+.s-lc-whw-pr, .s-lc-whw-ne{ padding: 5px 10px; font-size: 12px; line-height: 1.5; border-radius: 3px; color: #333; background-color: #fff; border-color: #ccc; display: inline-block; margin-bottom: 0; font-weight: 400; text-align: center; vertical-align: middle; cursor: pointer; background-image: none; border: 1px solid transparent; white-space: nowrap; }
+.s-lc-whw-pr:disabled { background-color: #efefef; }
+.s-lc-whw-ne:disabled { background-color: #efefef; }
+.s-lc-whw { width: 100%; margin-bottom: 20px; max-width: 100%; background-color: transparent; border-bottom: none; border-left: none; border-collapse: collapse; border-spacing: 0; }
+.s-lc-whw>tbody>tr>td { padding: 5px; }
+.s-lc-whw>thead>tr>th { vertical-align: bottom; border-bottom: 2px solid #ddd; padding: 5px;}
+.s-lc-whw th { border-top: none; border-bottom: none; border-right: none;}
+.sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); border: 0; }
+@media (max-width: 768px) {
+	.s-lc-whw-cont .table-responsive { width: 80vw; margin-bottom: 15px; overflow-y: hidden; overflow-x: scroll; -ms-overflow-style: -ms-autohiding-scrollbar; border: 1px solid #ddd; -webkit-overflow-scrolling: touch; }
+	.s-lc-whw td { white-space: nowrap; }
 }
 
 /* People: */
@@ -297,7 +370,7 @@
 
 .makerspace__usage {
 	grid-area: usage;
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 1150px) {
 		padding-left: 8.33%;
 	}
 }
@@ -318,6 +391,7 @@
 
 #equipment-btn {
   background: #0ff;
+	color:#873cdd;
   padding: 4px;
   margin: 4px;
   line-height: 2.5em;
