Change heading on events page

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -48,7 +48,7 @@ layout: default
 		</div> <!-- end stats -->
 
 		<div class="event__description">
-			<div class="event-describe__title">About</div>
+			<div class="event-describe__title">Event Info</div>
 			<div class="event-describe__text">
 			{% unless page.content.size == 1 or page.content == blank or page.content == empty %}
 				{{ content }}
