--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -265,7 +265,7 @@ html, body {
 
 .home__contact {
 	grid-area: contact;
-	border: 4px solid $medskyblue;
+	border: 4px solid #f1f1f1;
 }
 
 .home-contact__title {
@@ -276,8 +276,7 @@ html, body {
 	position: relative;
 	display: flex;
 	flex-flow: column nowrap;
-	align-items: center;
-	@media screen and (min-width: 600px) {
+	@media screen and (min-width: 1000px) {
 		flex-flow: row nowrap;
 	}
 }
@@ -611,4 +610,52 @@ html, body {
 	top: 0;
 	left: 0;
 	max-height: 75vh;
+}
+
+#mc_embed_signup {
+	padding: 2rem;
+	background-color: $blue-alt-lightest;
+	min-width: 400px;
+	h2 {
+		margin-top:0;
+		font-size: 1.25rem;
+	}
+
+	label {
+		display:block;
+	}
+	input[type=text],
+	input[type=email],
+	fieldset {
+		margin-bottom: 1rem;
+	}
+
+	input[type=radio] + label {
+		display:inline;
+	}
+	fieldset {
+		border-style:none;
+		padding:0;
+		ul {
+			margin:0;
+			padding:0;
+			list-style:none;
+		}
+	}
+
+	input[type=submit] {
+		border:0;
+		border-radius: 5px;
+		color: white;
+		background-color: $brand-blue !important;
+
+		&:hover,
+		&:focus {
+			background-color: $brand-blue-light !important;
+		}
+
+		&:active {
+			background-color: $brand-blue-lighter !important;
+		}
+	}
 }
