Updates P.O. Box; Fixes #963.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,7 +51,7 @@
     <div class="footer__contact">
       <div class="footer-contact__title">Contact</div>
       <div class="footer-contact__email"><span>Email:</span><a href="mailto:scholarslab@virginia.edu">scholarslab@virginia.edu</a></div>
-      <div class="footer-contact__address"><span>Address:</span>P.O. Box 400109<br/>Charlottesville, VA<br/>22904-4129</div>
+      <div class="footer-contact__address"><span>Address:</span>P.O. Box 400115<br/>Charlottesville, VA<br/>22904</div>
       <div class="footer-contact__phone"><span>Phone:</span>434-243-8800</div>
     </div>
 
